uf-6954: new casetypes for mex